RESOLVED FIXED183456
AX: WebKit seems to be running spell checker even on non-editable content text
https://bugs.webkit.org/show_bug.cgi?id=183456
Summary AX: WebKit seems to be running spell checker even on non-editable content text
chris fleizach
Reported 2018-03-08 09:27:56 PST
Created attachment 335305 [details] test file WebKit seems to be performing spell checking on content when AX client requests attributed text content, even when the content is not within an editable text area. Steps To Reproduce: 1. Open the attached HTML page in Safari 2. Turn on VoiceOver, then interact into the web content (VO-Shift-down arrow), then jump to next paragraph (VO-Shift-PageDown or Vo-Shift-Fn-down arrow) to land on the second paragraph Results: VO starts reading the second paragraph content as: Where view. Around a to take to mouth. Often, misspelled, a, only, misspelled, their, and prudently, sacred.
Attachments
test file (1.57 KB, text/html)
2018-03-08 09:27 PST, chris fleizach
no flags
patch (7.39 KB, patch)
2018-03-08 16:34 PST, chris fleizach
no flags
chris fleizach
Comment 1 2018-03-08 09:28:11 PST
chris fleizach
Comment 2 2018-03-08 16:34:58 PST
WebKit Commit Bot
Comment 3 2018-03-09 19:53:45 PST
Comment on attachment 335367 [details] patch Clearing flags on attachment: 335367 Committed r229500: <https://trac.webkit.org/changeset/229500>
WebKit Commit Bot
Comment 4 2018-03-09 19:53:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.