AX: WebKit seems to be running spell checker even on non-editable content text https://bugs.webkit.org/show_bug.cgi?id=183456 <rdar://problem/38076042>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Test: accessibility/mac/attributed-string/attributed-string-does-not-includes-misspelled-for-non-editable.html

Only apply misspelled attributes if it's for editable text. It's not useful or performant to do this for static text.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(AXAttributeStringSetSpelling):

LayoutTests:

* accessibility/mac/attributed-string/attributed-string-does-not-includes-misspelled-for-non-editable-expected.txt: Added.
* accessibility/mac/attributed-string/attributed-string-does-not-includes-misspelled-for-non-editable.html: Added.
* accessibility/mac/attributed-string/attributed-string-for-range-with-options.html:
* accessibility/mac/attributed-string/attributed-string-for-range.html:
     Update tests to reflect that only editable content returns misspelled attributes.


Canonical link: https://commits.webkit.org/199202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229500 268f45cc-cd09-0410-ab3c-d52691b4dbfc